--- a/templates/main.html
+++ b/templates/main.html
@@ -10,7 +10,8 @@
     <h1 style="text-align: center;">CRUD Application</h1>
 
     <div class="center">
-        <form action="{{ url_for("values")}}" method="post">
+        <!-- Send the values to the values function in flask -->
+        <form action="{{ url_for("values")}}" method="post"> 
             <label for="name">Name:</label><br>
             <input type="text" id="name" name="name"><br>
             <label for="id">ID:</label><br>
@@ -27,6 +28,7 @@
         </form>
     </div>
 
+    <!-- print out the table -->
     <table>
         <tr>
             <th>Student</th>
